# Predprof-2026

./: README.md  date_list.csv  history.csv  history_pass_scores.csv  history_test.csv  programs.csv  proverka.py  pyproject.toml  spisok.py  start.py  zapusk.csv  абитуриенты.csv
