[tool.poetry]
name = "konkursnye-spiski"
version = "0.1.1"
description = "GUI-приложение для конкурсных списков абитуриентов: загрузка XLSX, расчёт рекомендаций к зачислению, отчёты PDF/CSV, графики."
authors = ["Ваше Имя <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.2.0"
openpyxl = "^3.1.2"
pillow = "^10.4.0"
matplotlib = "^3.9.0"
reportlab = "^4.2.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
ruff = "^0.6.8"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
